vua xong cờ vua

--- a/GitAndHTML/HTML.html
+++ b/GitAndHTML/HTML.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
+<style>
+    body {
+        background-image: url("https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4wtct?ver=23bb");
+        background-size: contain;
+    }
+</style>
 <body>
-$END$
+<h1>duoclanguage</h1>
+<p>duovippro1123</p>
+<img src="" alt="">
+<a href=""></a>
+<input type="text">
+<button></button>
 </body>
 </html>
