--- a/GitAndHTML/HTML2.html
+++ b/GitAndHTML/HTML2.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Trang web của tôi</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #ffffff;
+        }
+        .header {
+            background-color: #e2690b;
+            color: #ffffff;
+            padding: 10px;
+            text-align: center;
+        }
+        .main-content {
+            background-color: #0273f3;
+            color: #ffffff;
+            padding: 2px;
+            text-align: center;
+        }
+        .news-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        .news-item img {
+            width: 100px;
+            height: auto;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
-$END$
+<div class="header">
+    <h1>FPT</h1>
+    <p>Trang chủ | Tin tức | Sản phẩm | Hình ảnh | Liên hệ | Tìm kiếm</p>
+</div>
+<div class="main-content">
+    <h2>TV THƯỜNG SMART TV</h2>
+    <div class="news-item">
+        <img src="hinh_anh_tin_tuc_1.jpg" alt="Hình ảnh tin tức 1">
+        <p>Tin tức về Nam ôy Olympic ngày 27/7: Hoàng Thùy Duyên vs HCD</p>
+    </div>
+    <!-- Thêm các mục tin tức khác tại đây -->
+</div>
 </body>
 </html>
