--- a/GitAndHTML2/CV.html
+++ b/GitAndHTML2/CV.html
@@ -1,10 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<p>Họ và Tên: Phạm Phúc Được</p>
+<p>Ngày sinh 10/10/1994</p>
+<p>GYMcode tang 5 </p>
+<img src="download.jpg" alt="" style="width: 300px;height: 300px;border-radius: 50%">
+<a href="https://github.com/duocjoin/GitAndHTML">
+    <img src="download.jpg" alt="" style="width: 300px;height: 300px;border-radius: 50%"></a>
+
+<p>yassua</p>
+<table border="1" style="border-collapse: collapse">
+    <tr>
+        <th>thứ 3 </th>
+        <th>thứ 5</th>
+        <th>thứ 7</th>
+    </tr>
+    <tr>
+        <td>T1</td>
+        <td></td>
+        <td></td>
+    </tr>
+    
+</table>
+<table>
+    <tr>
+        <td></td>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+    </tr>
+    <tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr><tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr><tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr><tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr><tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr><tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr><tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr><tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr><tr>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td style="width: 50px;height: 50px;background: black"></td>
+        <td style="width: 50px;height: 50px;background: yellow"></td>
+    </tr>
+</table>
+
 </body>
 </html>
