--- a/GitAndHTML2/CV.html
+++ b/GitAndHTML2/CV.html
@@ -12,133 +12,53 @@
 <a href="https://github.com/duocjoin/GitAndHTML">
     <img src="download.jpg" alt="" style="width: 300px;height: 300px;border-radius: 50%"></a>
 
-<p>yassua</p>
-<table border="1" style="border-collapse: collapse">
+<table border="1">
     <tr>
-        <th>thứ 3 </th>
-        <th>thứ 5</th>
-        <th>thứ 7</th>
+        <td colspan="3"></td>
+        <th style="background: yellow">thứ 3</th>
+        <th style="background: yellow">thứ 5</th>
+        <th style="background: yellow">thứ 7</th>
     </tr>
     <tr>
-        <td>T1</td>
-        <td></td>
-        <td></td>
+        <th style="background: #e2690b">tuần</th>
+        <th style="background: #e2690b">ngày bắt đầu</th>
+        <th style="background: #e2690b">ngày kết thúc</th>
+        <th colspan="3"style="background: #e2690b">môn học</th>
     </tr>
-    
-</table>
-<table>
     <tr>
-        <td></td>
         <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
     </tr>
     <tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-    </tr><tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-    </tr><tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-    </tr><tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-    </tr><tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-    </tr><tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-    </tr><tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-    </tr><tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-    </tr><tr>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
-        <td style="width: 50px;height: 50px;background: black"></td>
-        <td style="width: 50px;height: 50px;background: yellow"></td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
     </tr>
 </table>
-
+imput type="text"
+imput tye="radio"
+ví dụ loại chọn:
+<select>
+    <option>VN</option>
+    <option>TQ</option>
+    <option>Mỹ</option>
+</select>
+ví dụ loại nút:
+<button>A</button>
 </body>
 </html>
